# playground

./: .gitignore
ai/: cnn_mnist_classifier.py  cnn_tutorial.ipynb
ai/modules/: MyNetwork.py
cpp/: CMakeLists.txt  Makefile  a.out  basic_csv_file.cpp  basic_enum_class_flag.cpp  basic_file.cpp  basic_filesystem.cpp  basic_gaussian_noise.cpp  basic_map.cpp  basic_multi_thread.cpp  basic_multi_thread_2threads.cpp  basic_multi_thread_mutex.cpp  basic_nothing.cpp  basic_random.cpp  basic_static.cpp  basic_unordered_map.cpp  basic_vector.cpp  boost_format.cpp  copy_array  copy_array.cpp  cv_mat  eigen  eigen_basic.cpp  eigen_rpe.cpp  eigen_transform.cpp  find_fundamental_matrix.cpp  get_right_image  get_right_image.cpp  gtsam_NonLinearFactorGraph.cpp  gtsam_OdometryExample.cpp  gtsam_Pose2SLAMExample_graphviz.cpp  gtsam_StereoVOExample.cpp  gtsam_StereoVOExample_large.cpp  gtsam_basic.cpp  gtsam_between.cpp  gtsam_pose.cpp  measure_time  measure_time.cpp  mono_pair360.cc  new.cpp  (+16 more)
cpp/files/: OdometryExample.dot  Pose2SLAMExample.dot  StereoVOExample.dot  Untitled Document 1  csv_file.csv  feature_frame0.txt  visual_odometry_example.yaml
cpp/g2o_playground/: CMakeLists.txt  circle_fit.cpp
cpp/vo_patch/: trajectory.csv  vo_patch.yaml
datasets/KITTI-360/data/2013_05_28_drive_0000_sync/image_02/: timestamps.txt
datasets/UZH/rpg_urban_fisheye/info/: README.md  depthmaps.txt  images.txt  intrinsics.txt
ipynb/: .gitignore  align_rgbd.ipynb  depth_filter.ipynb  detect_and_compute.ipynb  extract_rosbag_frames.ipynb  get_3D_points_from_rgbd_frame.ipynb  gym_tutorial.ipynb  matplotlib_3d_points.ipynb  opencv_chessboard.ipynb  opencv_feature.ipynb  opencv_get_rigt_image.ipynb  opencv_mask_rider.ipynb  opencv_matchTemplate.ipynb  opencv_orb.ipynb  opencv_resize_image.ipynb  opencv_rotate_image.ipynb  pytorch_3dconv.ipynb  pytorch_tutorial.ipynb  rosbag.ipynb  rotation_to_euler.ipynb  stereo_calibration.ipynb  vo_lower_bound.ipynb
ipynb/files/: interesting_frames.csv
ml/: cnn_tutorial.ipynb  onr.ipynb
ml/autoencoder/: autoencoder.py  test_autoencoder.py  test_autoencoder_interpolate.py
ml/diffusion/: diffusion.py  test_diffusion.py  vis_diffusion.ipynb
ml/mnist_classifier/: cnn_mnist_classifier.py  sweep_model.py  test_cnn_mnist_classifier.ipynb  train_cnn_mnist_classifier.py
ml/modules/: MyDataset.py  MyNetwork.py
opencv/: cornerSubPixel.ipynb  hello_opencv.cpp  matchTemplate  matchTemplate.cpp
orbslam3_keypoint/: logs.txt  orbslam3_keypoints.ipynb
python/: basic_import_myModule.py  caliman_mono.py  cv_point_formater.py  display_depth_to_pcd.py  gym_play.py  imu_tracking.py  make_stereo.py  nothing.py  opencv_camera_calibration.py  opencv_pose_estimation.py  opencv_subpixel.py  rl_REINFORCE_test.py  rosbag_downsample.py  rpy_to_matrix.py  video_to_rosbag.py  video_to_rosbag_with_rotation.py  video_to_rosbag_with_rotation_downsample.py  vo_handmade_match.py  vo_lower_bound.py
python/files/: cv_feature_format.txt  feature_backup.txt  frames_feature_info.csv
python/model_parameters/: ch9_REINFORCE.pt
python/myModules/: __init__.py  myModule.py
ros/models/10x7_my_checkerboard/: 10x7_my_checkerboard.sdf  model.config
ros/models/10x7_my_checkerboard/materials/scripts/: checkerboard.material
ros/models/13x9_my_checkerboard/: 13x9_my_checkerboard.sdf  model.config
ros/models/13x9_my_checkerboard/materials/scripts/: checkerboard.material
ros/models/5x3_my_checkerboard/: 5x3_my_checkerboard.sdf  model.config
ros/models/5x3_my_checkerboard/materials/scripts/: checkerboard.material
ros/models/6x4_my_checkerboard/: 6x4_my_checkerboard.sdf  model.config
ros/models/6x4_my_checkerboard/materials/scripts/: checkerboard.material
ros/models/7x4_my_checkerboard/: 7x4_my_checkerboard.sdf  model.config
ros/models/7x4_my_checkerboard/materials/scripts/: checkerboard.material
ros/models/8x6_my_checkerboard/: 8x6_my_checkerboard.sdf  model.config
ros/models/8x6_my_checkerboard/materials/scripts/: checkerboard.material
ros/turtlebot3_gazebo/launch/: turtlebot3_vo_testbed.launch
ros/turtlebot3_gazebo/rviz/: turtlebot3_vo_testbed.rviz
ros/turtlebot3_gazebo/urdf/: turtlebot3_waffle_modified.urdf.xacro
ros/turtlebot3_gazebo/worlds/: vo_testbed.world  vo_testbed2.world
simple_lib/: CMakeLists.txt
simple_lib/include/: foo.h
simple_lib/src/: foo.cpp
temp/ORB-SLAM3/: Frame.cc  KITTI-360-00.yaml  ORBextractor.cc  ORBextractor.h  ORBmatcher.cc  System.cc  mono_kitti.cc
test_image_sequences/l515_aligned_vertical_stereo_kf/: calib.txt
visual_odometry/: CMakeLists.txt
visual_odometry/app/: CMakeLists.txt  run_l515_stereo.cpp
visual_odometry/config/: default.yaml  l515_stereo.yaml
visual_odometry/include/myslam/: algorithm.h  backend.h  config.h  dataset.h  feature.h  frame.h  frontend.h  g2o_types.h  logger.h  map.h  mappoint.h  visual_odometry.h
visual_odometry/output_logs/: paths.csv
visual_odometry/src/: CMakeLists.txt  backend.cpp  config.cpp  dataset.cpp  debug.txt  frontend.cpp  logger.cpp  map.cpp  visual_odometry.cpp
